# codechat

./: .gitignore  README.md  codechat  config.example.json  index.html  install.sh
.github/workflows/: release.yml
docs/: index.html
scripts/: gen_icons.py
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
supabase/: schema.sql
tui/: Cargo.toml
tui/src/: main.rs  realtime.rs
vscode/: codechat.vsix  extension.js  package.json
vscode/media/: chat-utils.js  chat.css  chat.js
vscode/test/: chat-utils.test.js
